# client-python

./: .gitignore  Makefile  README.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg  test-requirements.txt
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.ideconf/: Build docs.run.xml  Serve web docs.run.xml  Tests.run.xml
docs/: conf.py  index.rst  requirements.txt
docs/client_usage/: getting_started.rst
pybas/: __init__.py  base.py  client.py  exceptions.py  mixins.py  types.py  utils.py
pybas/_apis/: __init__.py  attack_pattern.py  inject.py  injector.py  kill_chain_phase.py  me.py  organization.py
pybas/_backends/: backend.py
pybas/_contracts/: contract_builder.py  contract_config.py  contract_utils.py  variable_helper.py
pybas/_injectors/: email_injector.py  injector_helper.py
pyobas/: __init__.py  _version.py  base.py  client.py  exceptions.py  helpers.py  mixins.py  test_open_bas_detection_helper.py  utils.py
pyobas/_apis/: __init__.py  attack_pattern.py  collector.py  document.py  inject.py  injector.py  kill_chain_phase.py  me.py  organization.py  team.py  user.py
pyobas/_backends/: __init__.py  backend.py
pyobas/_contracts/: contract_builder.py  contract_config.py  contract_utils.py  variable_helper.py
pyobas/_injectors/: injector_helper.py
pyobas/apis/: __init__.py  attack_pattern.py  collector.py  cve.py  document.py  endpoint.py  inject_expectation.py  inject_expectation_trace.py  injector.py  payload.py  security_platform.py  tag.py  team.py  user.py
pyobas/apis/inject_expectation/: __init__.py  inject_expectation.py
pyobas/apis/inject_expectation/model/: __init__.py  expectation.py
pyobas/backends/: backend.py
pyobas/configuration/: configuration.py  sources.py
pyobas/contracts/: __init__.py  contract_builder.py  contract_config.py  variable_helper.py
pyobas/daemons/: __init__.py  base_daemon.py  collector_daemon.py
pyobas/signatures/: signature_match.py  signature_type.py  types.py
pyobas/test/: test_helpers.py
scripts/: release.py
test/apis/expectation/: test_expectation.py
test/configuration/: test_configuration.py  test_sources.py
test/daemons/: test_base_daemon.py  test_collector_daemon.py
test/signatures/: test_signature_match.py  test_signature_type.py
