[project]
name = "pyobas"
dynamic = ["version"]
description = "Python API client for OpenBAS."
authors = [
    {name = "Filigran", email = "contact@filigran.io"}
    ]
maintainers = [
    {name = "Filigran", email = "contact@filigran.io"}
    ]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: French",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "datefinder (>=0.7.3,<0.8)",
    "pika (>=1.3.0,<1.4.0)",
    "python-magic (>=0.4.27,<0.5); sys_platform == 'linux' or sys_platform == 'darwin'",
    "python-magic-bin (>=0.4.14,<0.5); sys_platform == 'win32'",
    "python_json_logger (>=3.3.0,<3.4.0)",
    "PyYAML (>=6.0,<6.1)",
    "pydantic (>=2.11.3,<2.12.0)",
    "requests (>=2.32.3,<2.33.0)",
    "setuptools (>=80.4.0,<80.5.0)",
    "cachetools (>=5.5.0,<5.6.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "opentelemetry-api (>=1.32.0,<1.33.0)",
    "opentelemetry-sdk (>=1.32.0,<1.33.0)",
    # OpenBAS,
    "requests-toolbelt (>=1.0.0,<1.1.0)",
    "dataclasses-json (>=0.6.4,<0.7.0)",
    "thefuzz (>=0.22,<0.23)"
]

[project.optional-dependencies]
dev = [
    "black (>=25.1.0,<25.2.0)",
    "build (>=1.2.1,<1.3.0)",
    "isort (>=6.0.0,<6.1.0)",
    "types-pytz (>=2025.2.0.20250326,<2025.3.0.0)",
    "pre-commit (>=4.2.0,<4.3.0)",
    "types-python-dateutil (>=2.9.0,<2.10.0)",
    "wheel (>=0.45.1,<0.46.0)"
]
doc = [
    "autoapi (>=2.0.1,<2.1.0)",
    "sphinx-autodoc-typehints (>=3.2.0,<3.3.0)",
    "sphinx-rtd-theme (>=3.0.2,<3.1.0)"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools.dynamic]
version = { attr = "pyobas.__version__" }

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py37"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
