[metadata]
name = pyobas
version = attr: pyobas.__version__
author = Filigran
author_email = contact@filigran.io
maintainer = Filigran
url = https://github.com/OpenBAS-Platform/client-python
description = Python API client for OpenBAS.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages =
    pyobas
    pyobas.apis
    pyobas.backends
    pyobas.contracts

include_package_data = True
install_requires =
    # Filigran
    datefinder~=0.7.3
    pika~=1.3.0
    python-magic~=0.4.27; sys_platform == 'linux' or sys_platform == 'darwin'
    python-magic-bin~=0.4.14; sys_platform == 'win32'
    python_json_logger~=2.0.4
    PyYAML~=6.0
    requests~=2.32.3
    setuptools~=70.0.0
    cachetools~=5.3.0
    prometheus-client~=0.20.0
    opentelemetry-api~=1.24.0
    opentelemetry-sdk~=1.24.0
    # OpenBAS
    requests-toolbelt~=1.0.0
    dataclasses-json~=0.6.4
    thefuzz~=0.22

[options.extras_require]
dev =
    black~=24.4.0
    build~=1.2.1
    isort~=5.13.0
    types-pytz~=2024.1.0.20240203
    pre-commit~=3.7.1
    types-python-dateutil~=2.9.0
    wheel~=0.43.0
doc =
    autoapi~=2.0.1
    sphinx-autodoc-typehints~=2.1.0
    sphinx-rtd-theme~=2.0.0
